--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "learning node",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./index.js"
+    "start": "nodemon --inspect ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/MinkuruDev/Blog#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.4"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
