login and register

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/MinkuruDev/Blog#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.4"
+    "express-handlebars": "^5.3.4",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
